// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`src/components/atoms/SliderInput.vue snapshot default 1`] = `
<div
  class="slider-wrapper"
>
  <div
    class="slider-background"
    style="transform: scaleX(0);"
  />
  <input
    type="text"
  />
  <div
    class="slider-forward"
  />
  <!--v-if-->
</div>
`;

exports[`src/components/atoms/SliderInput.vue snapshot disabled 1`] = `
<div
  class="slider-wrapper"
>
  <div
    class="slider-background"
    style="transform: scaleX(0);"
  />
  <input
    disabled=""
    type="text"
  />
  <!--v-if-->
  <!--v-if-->
</div>
`;
